<resources>
    <string name="app_name">SisMo App</string>
    <string name="app_title">SisMo</string>
    <string name="action_settings">Configuraciones</string>
    <string name="title_activity_login">Iniciar sesion</string>
    <string name="username_input_hint">Nombre de usuario</string>
    <string name="password_input_hint">Contraseña</string>
    <string name="repit_password_input_hint">Repetir contraseña</string>
    <string name="login_text">Iniciar sesion</string>
    <string name="password_text">Contraseña</string>
    <string name="repit_password_text">Repetir contraseña</string>
    <string name="title_activity_home">Inicio</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_logout">Cerrar sesion</string>
    <string name="add_moto">Agregar moto</string>
    <string name="update_profile">Update profile</string>
    <string name="title_activity_moto_details">Detalles</string>
    <string name="brand">Marca</string>
    <string name="line">Linea</string>
    <string name="plate">Placa</string>
    <string name="color">Color</string>
    <string name="cylinder_capacity">Cilindraje</string>
    <string name="title_activity_moto_status">Status</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_add_moto">Agregar moto</string>
    <string name="action_add_moto">Agregar moto</string>
    <string name="model">Modelo</string>
    <string name="TextOfAddMotoButton">Agregar moto</string>
    <string name="TextOfUpdateMotoButton">Actualizar informacion</string>
    <string name="TextOfLoadImageButton">Agrega imagen</string>
    <string name="mac">Mac</string>
    <string name="TextOfMonitoringStatusTextView">Monitoreo:</string>
    <string name="TextOfSafetyLockStatusTextView">Seguro:</string>
    <string name="TextOfElectricalFlowStatusTextView">Fluido electrico:</string>
    <string name="TextOfUbicationTextView">Ubicacion:</string>
    <string name="TextOfGetUbicationButton">Obtener ubicacion</string>
    <string name="TextOfStartMonitoringButton">Iniciar monitoreo</string>
    <string name="TextOfSeeStatusButton">Ver estado</string>
    <string name="TextOfDeleteMotoButton">Eliminar</string>
    <string name="action_load_motos">Cargar motos</string>
    <string name="TextOfUpdateDataButton">Acualizar datos</string>
    <string name="TextOfConnectionStatusTextView">Conexion:</string>
    <string name="signup_text">Registrarse</string>
    <string name="TextOfStartRegisterAsStolen">Registrar como robada</string>
    <string name="TextOfGetStatusButton">Obtener estado</string>
    <string name="TextOfLauchMap">Abrir mapa</string>
    <string name="TextOfOpenMap">Abrir mapa</string>
</resources>