<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pedro.sismoapp.LoginActivity"
    android:orientation="vertical"
    android:background="@color/primary"
    android:padding="10dp">

    <TextView
        android:text="@string/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/icons"
        android:textStyle="bold"
        android:typeface="sans"
        android:textSize="80sp"
        android:id="@+id/SismoTitleTextView"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_above="@+id/LoginTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text"
        android:id="@+id/LoginTextView"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:layout_centerInParent="true" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/SignupActivity_TextInputLayout_Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_below="@+id/LoginTextView"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/SignupActivity_EditText_Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username_input_hint"
            android:inputType="text|textAutoComplete" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/SignupActivity_TextInputLayout_Password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_alignParentEnd="false"
        android:layout_below="@+id/SignupActivity_TextInputLayout_Username"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/SignupActivity_EditText_Password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_input_hint"
            android:inputType="textNoSuggestions|textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/SignupActivity_TextInputLayout_Password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_alignParentEnd="false"
        android:layout_below="@+id/SignupActivity_TextInputLayout_Password1"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/SignupActivity_EditText_Password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/repit_password_input_hint"
            android:inputType="textNoSuggestions|textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_text"
        android:id="@+id/singupButton"
        android:clickable="true"
        android:enabled="true"
        android:textStyle="bold"
        android:typeface="sans"
        android:onClick="onClickSignupButton"
        android:layout_gravity="center"
        android:layout_below="@+id/SignupActivity_TextInputLayout_Password2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
