<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:id="@+id/MotoListItem_CardView_Moto"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    android:layout_marginStart="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">
<!--android:onClick="onClickMotoItemList"-->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RelativeLayoutStatus">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/MotoListItem_ImageView_MotoImage"
                android:layout_alignWithParentIfMissing="false"
                android:layout_alignParentTop="false"
                android:layout_alignParentStart="false"
                android:scaleType="centerCrop" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#CC2196F3"
                android:textColor="@color/white"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Yamaha FZ"
                    android:id="@+id/MotoListItem_TextView_BrandAndLine"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/white" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TextOfSeeStatusButton"
                    android:id="@+id/MotoListItem_Button_SeeStatus"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/white"/>

            </RelativeLayout>




        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/LinearLayoutData"
            android:layout_below="@+id/RelativeLayoutStatus"
            android:layout_alignParentStart="true">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Placa"
                    android:id="@+id/textView2"
                    android:layout_alignParentStart="false"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="ABC 123"
                    android:id="@+id/MotoListItem_TextView_Plate"
                    android:layout_below="@+id/textView2"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Color"
                    android:id="@+id/textView3"
                    android:layout_alignParentStart="false"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Blanca"
                    android:id="@+id/MotoListItem_TextView_Color"
                    android:layout_marginLeft="4dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/textView3" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2"
            android:layout_below="@+id/LinearLayoutData"
            android:layout_alignParentStart="true"
            android:padding="0dp">
            <Button
                android:id="@+id/MotoListItem_Button_Delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/TextOfDeleteMotoButton"
                android:layout_marginRight="4dp"
                android:textSize="14dp" />
            <Button
                android:id="@+id/MotoListItem_Button_StartMonitoring"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/TextOfStartMonitoringButton"
                android:layout_marginLeft="4dp"
                android:textAlignment="center"
                android:textSize="14dp" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>

